Updated checkout flow
